--- a/wp-content/themes/eleven40/style.css
+++ b/wp-content/themes/eleven40/style.css
@@ -59,7 +59,6 @@
 * Footer
 * Comments
 * Gravity Forms
-* Video Meta
 * eleven40 Blue
 * eleven40 Green
 * eleven40 Red
@@ -73,13 +72,20 @@
 /* @group Import Fonts
 ------------------------------------------------------------ */
 
-@import url(http://fonts.googleapis.com/css?family=Lora);
-@import url(http://fonts.googleapis.com/css?family=Oswald);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,300italic|Oxygen:300,400);
 
 /* @end */
 
 /* @group Defaults
 ------------------------------------------------------------ */
+
+body {
+	font-size: 18px;
+	color: #555;
+	font-family: 'Open Sans', helvetica, sans-serif;
+	line-height: 1.5em;
+
+}
 
 body,
 h1,
@@ -93,13 +99,14 @@ h6,
 p,
 select,
 textarea {
-	color: #333;
-	font-family: 'Lora', serif;
-	font-size: 16px;
-	line-height: 1.5625;
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Oxygen', 'Open Sans', helvetica, sans-serif;
+	font-weight: 300;
 }
 
 blockquote,
@@ -121,7 +128,7 @@ select,
 textarea {
 	box-sizing: border-box;
 	color: #333;
-	font-family: 'Lora', serif;
+	font-family: 'Open Sans', helvetica, sans-serif;
 	font-size: 14px;
 }
 
@@ -194,11 +201,18 @@ a img {
 ------------------------------------------------------------ */
 
 #header {
-	background: #2b2b2b url(images/bg-pattern.png) left top;
-	}
+	position: relative;
+	height: 275px;
+	background: #444 url(images/bg-image.jpg) left top;
+	background-size: cover;
+	overflow: hidden;
+}
+
 #header .wrap {
-	background: url(images/logo.png) top left no-repeat;
-	min-height: 150px;
+	height: 100%;
+	box-sizing: border-box;
+	padding: 50px 0;
+	z-index: 2;
 }
 
 #title-area {
@@ -208,17 +222,18 @@ a img {
 }
 
 #title {
-	font-family: 'Oswald', arial, serif;
+	font-family: 'Oxygen', arial, serif;
 	font-size: 30px;
 	line-height: 1.4;
 	margin: 12px 0 0 32px;
 	text-shadow: 0 1px #333;
 }
 
-#title a,
-#title a:hover {
-	color: #fff;
-	text-decoration: none;
+#title a {
+	display: block;
+	background: url(images/logo.png) top left no-repeat;
+	width: 100%;
+	height: 100%;
 }
 
 #description {
@@ -241,11 +256,12 @@ a img {
 .header-image #title a {
 	display: block;
 	float: left;
-	height: 90px;
+	height: 180px;
 	overflow: hidden;
 	padding: 0;
 	text-indent: -9999px;
-	width: 265px;
+	width: 460px;
+	margin: 0;
 }
 
 .header-image #description {
@@ -271,6 +287,10 @@ a img {
 /* @group Header / Primary / Secondary Navigation
 ------------------------------------------------------------ */
 
+#nav {
+	background-color: #f1f1f1;
+}
+
 .menu-primary,
 .menu-secondary {
 	clear: both;
@@ -285,11 +305,6 @@ a img {
 	float: right;
 	font-size: 14px;
 	text-transform: uppercase;
-}
-
-.menu-primary {
-	border-bottom: double #ddd;
-	border-top: double #ddd;
 }
 
 .menu-primary ul,
@@ -309,9 +324,9 @@ a img {
 .menu-secondary a,
 #header .menu a {
 	color: #333;
+	font-size: 1.1rem;
 	display: block;
-	font-family: 'Oswald', arial, serif;
-	padding: 10px 15px;
+	padding: 20px 15px;
 	position: relative;
 	text-decoration: none;
 	text-shadow: none;
@@ -445,7 +460,6 @@ ul.menu li.sfHover ul,
 
 .menu li.right {
 	float: right;
-	font-family: 'Oswald', arial, serif;
 	padding: 10px 15px;
 }
 
@@ -488,8 +502,7 @@ ul.menu li.sfHover ul,
 }
 
 #inner .wrap {
-	border-bottom: double #ddd;
-	margin: 0 auto 30px;
+	margin: 30px auto;
 	overflow: hidden;
 }
 
@@ -502,7 +515,7 @@ ul.menu li.sfHover ul,
 .page-title {
 	border-bottom: double #ddd;
 	border-top: double #ddd;
-	font-family: 'Lora', serif;
+	font-family: 'Open Sans', helvetica, sans-serif;
 	font-size: 30px;
 	line-height: 1.0;
 	overflow: hidden;
@@ -770,7 +783,6 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Oswald', arial, serif;
 	font-weight: normal;
 	line-height: 1.25;
 	margin: 0 0 10px;
@@ -794,7 +806,6 @@ h2 a,
 h2 a:visited {
 	color: #333;
 	text-shadow: none;
-	font-family: 'Oswald', arial, serif;
 }
 
 h2 a:hover {
@@ -983,6 +994,40 @@ h5 {
 	width: 50%;
 }
 
+/* @end */
+
+/* @group Home Page
+------------------------------------------------------------ */
+
+.recent-posts h2 a {
+	font-size: 1.75rem;
+}
+
+.recent-posts .genesis-grid {
+	margin: 40px 0;
+    padding: 0 15px;
+    box-sizing: border-box;
+}
+
+.recent-posts img {
+	width: 100%;
+	height: auto;
+}
+
+.welcome-box p {
+	margin-bottom: 1em;
+}
+
+.tracks {
+	margin: 30px 0;
+	text-align: center;
+}
+
+.tracks img {
+	width: 80%;
+	height: auto;
+	margin: 0 auto;
+}
 
 /* @end */
 
@@ -1199,7 +1244,7 @@ video {
 	background-color: #444;
 	border: none;
 	color: #fff;
-	font-family: 'Oswald', arial, serif;
+	font-family: 'Oxygen', arial, serif;
 	font-size: 14px;
 	padding: 5px 12px;
 	text-shadow: none;
@@ -1816,32 +1861,6 @@ div.gform_wrapper .gform_footer {
 
 .gform_wrapper .one2five .gfield_radio input[type="radio"] {
 	float: none;
-}
-
-/* @end */
-
-/* @group Video Meta
------------------------------------------------------------- */
-
-.video-meta {
-    margin-bottom: 1em;
-}
-
-p.video-meta-label {
-    width: 25%;
-    display: inline-block;
-    font-weight: normal;
-    text-align: right;
-    margin: 0 1em;
-    text-transform: uppercase;
-    font-family: 'Oswald', arial, serif;
-}
-
-p.video-meta-value {
-    width: 60%;
-    display: inline;
-    padding-left: 0%;
-    max-width: 60%;
 }
 
 /* @end */
